# PredictiveDataAnalytics-Seminar

./: .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.dvc/: config
.github/workflows/: test_deploy.yaml
data/raw/: .gitignore  EuroSAT_ILIAS.dvc  crypto.dvc
notebooks/: airbnb.ipynb  setup.ipynb  utkface-age-regression-baseline-with-tf-data-api.ipynb  utkface.ipynb
tests/: test_main.py
